# based

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.config/: nextest.toml
.github/workflows/: rust.yaml
src/: editor.rs  main.rs  syscall.rs  terminal.rs  termios.rs
src/editor/: editor_state.rs  file_buffer.rs  key_handlers.rs  kill_ring.rs  mod.rs  search_state.rs  syntax_highlight.rs
